@@ -5,7 +5,7 @@
 .\"	Sebastien Pouliot  <sebastien@ximian.com>
 .\"	Jesse Jones  <jesjones@mindspring.com>
 .\"
-.\" Copyright (C) 2005-2006,2008-2009 Novell, Inc (http://www.novell.com)
+.\" Copyright (C) 2005-2006,2008-2010 Novell, Inc (http://www.novell.com)
 .\"
 
 .de Sp
@@ -96,6 +96,27 @@ E.g.
 .nf
     GENDARME_COLOR=none gendarme ...
 .fi
+.SH EXIT STATUS
+.TP
+.I 0
+The runner returns 0 when no error has occurred. If some code was 
+analyzed then this also means that no defects were found and reported.
+.TP
+.I 1
+The runner execution was successful but either some defects where found
+or no assembly was specified.
+.TP
+.I 2
+The runner execution was interrupted by I/O errors (e.g. missing files).
+.TP
+.I 3
+The runner founds errors in the (default or user supplied) configuration
+files. Specific error messages should be printed on the console.
+.TP
+.I 4
+The runner execution was interrupted by a non-handled exception. This
+is likely a bug inside Gendarme and should be reported on Novell's
+bugzilla (http://bugzilla.novell.com) or on the mailing-list.
 .SH COPYRIGHT
 Copyright (C) 2005-2009 Novell, Inc (http://www.novell.com)
 .SH MAILING LISTS
